<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <com.seasapps.shoppingapp.widget.CustomTextViewRegular
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:text="@string/confirm_order"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_close" />

        </RelativeLayout>


        <com.seasapps.shoppingapp.widget.CustomTextViewRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/are_you_sure_do_you_want_to_place_your_order"
            android:textColor="@color/font_black_2"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/font_black_2"
            android:orientation="horizontal"
            android:paddingTop="0.01dp"
            android:weightSum="1">

            <com.seasapps.shoppingapp.widget.CustomButtonRegular
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="0.5"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/place_order"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:textSize="16sp" />

            <View
                android:layout_width="0.01dp"
                android:layout_height="0.01dp"
                android:background="@color/font_black_2" />

            <com.seasapps.shoppingapp.widget.CustomButtonRegular
                android:id="@+id/btn_no"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/font_black_2"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>