<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ThankYouActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="3dp">

        <com.seasapps.shoppingapp.widget.CustomTextViewRegular
            android:id="@+id/tv_toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_smiling" />

        <com.seasapps.shoppingapp.widget.CustomTextViewRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/thank_you"
            android:textColor="@color/font_black_0"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.seasapps.shoppingapp.widget.CustomTextViewRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/thanks_for_using_shopping_app"
            android:textColor="@color/font_black_0"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/buttonRipple"
            app:mrl_rippleDelayClick="false"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <com.seasapps.shoppingapp.widget.CustomButtonRegular
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_border_solid_btn"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/continue_to_shopping"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.balysv.materialripple.MaterialRippleLayout>


    </LinearLayout>

</RelativeLayout>