<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_above="@+id/ll_center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_online_shopping" />

    <LinearLayout
        android:id="@+id/ll_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp">

        <com.seasapps.shoppingapp.widget.CustomTextViewRegular
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_email_id"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="48"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/font_black_1"
            android:textColorHint="@color/font_black_1"
            android:textSize="16sp"
            app:met_accentTypeface="fonts/Lato-Regular.ttf"
            app:met_baseColor="@color/font_black_1"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/font_black_1"
            app:met_hideUnderline="false"
            app:met_iconPadding="0dp"
            app:met_primaryColor="@color/font_black_1"
            app:met_singleLineEllipsis="false"
            app:met_textColorHint="@color/font_black_1"
            app:met_typeface="fonts/Lato-Regular.ttf"
            tools:text="test@gmail.com" />

        <com.seasapps.shoppingapp.widget.PasswordEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/enter_password"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="12"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/font_black_1"
            android:textColorHint="@color/font_black_1"
            android:textSize="16sp"
            app:met_accentTypeface="fonts/Lato-Regular.ttf"
            app:met_baseColor="@color/font_black_1"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/font_black_1"
            app:met_hideUnderline="false"
            app:met_iconPadding="0dp"
            app:met_primaryColor="@color/font_black_1"
            app:met_singleLineEllipsis="false"
            app:met_textColorHint="@color/font_black_1"
            app:met_typeface="fonts/Lato-Regular.ttf" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/buttonRipple"
            app:mrl_rippleDelayClick="false"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <com.seasapps.shoppingapp.widget.CustomButtonRegular
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_border_solid_btn"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>

    <com.seasapps.shoppingapp.widget.CustomTextViewRegular
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/font_black_5"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/don_t_have_an_account_signup"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>